# clive

./: .env.sample  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
ai_cli/: commands.py  config.py  gemini.py  main.py
