[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-cli"
version = "0.1.0"
description = "CLI tool using Gemini to suggest/explain/bash commands"
authors = [{ name = "Sahil Patel" }]
dependencies = [
    "click",
    "requests",
    "python-dotenv",
    "pytest",
    "rich"
]

[project.scripts]
clive = "ai_cli.main:cli"